--- a/modules/repository/src/main/res/values/strings.xml
+++ b/modules/repository/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Repository</string>
+    <string name="watch" translatable="false">watch</string>
+    <string name="star" translatable="false">star</string>
+    <string name="forks" translatable="false">forks</string>
 </resources>
