--- a/modules/repository/src/main/res/values-zh/strings.xml
+++ b/modules/repository/src/main/res/values-zh/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">知识库</string>
     <string name="files">文件</string>
     <string name="file_content">文件内容</string>
+    <string name="repo_detail">仓库详情</string>
 </resources>
