--- a/baselib/github_base/src/main/res/values-zh/strings.xml
+++ b/baselib/github_base/src/main/res/values-zh/strings.xml
@@ -4,4 +4,8 @@
     <string name="error_response_is_null">返回的数据为空!!</string>
     <string name="success_copied">已复制</string>
 
+    <string name="seconds_ago">秒前</string>
+    <string name="minutes_ago">分钟前</string>
+    <string name="hours_ago">小时前</string>
+    <string name="days_ago">分钟前</string>
 </resources>
