--- a/baselib/github_base/src/main/res/values/strings.xml
+++ b/baselib/github_base/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
 
     <string name="error_response_is_null">response data is null!!</string>
     <string name="success_copied">Copied</string>
+    
+    <string name="seconds_ago">seconds ago</string>
+    <string name="minutes_ago">minutes ago</string>
+    <string name="hours_ago">hours ago</string>
+    <string name="days_ago">days ago</string>
 
 </resources>
