feat#add branch menu

--- a/modules/repository/src/main/res/values/strings.xml
+++ b/modules/repository/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="menu_code">Code</string>
     <string name="menu_issue">Issue</string>
     <string name="name_time_format" tools:ignore="MissingTranslation"><Data><![CDATA[您的保障缺口<br>共计<font color="#FA5050">%d</font>万<br>]]></Data></string>
+    <string name="branch">branch</string>
+    <string name="select_branch">select branch</string>
 
 
 </resources>
