--- a/modules/repository/src/main/res/values-zh/strings.xml
+++ b/modules/repository/src/main/res/values-zh/strings.xml
@@ -3,6 +3,10 @@
     <string name="files">文件</string>
     <string name="file_content">文件内容</string>
     <string name="repo_detail">仓库详情</string>
-    <string name="menu_code">Code</string>
-    <string name="menu_issue">Issue</string>
+    <string name="menu_code">代码</string>
+    <string name="menu_issue">问题</string>
+    <string name="branch">分支</string>
+    <string name="select_branch">选择分支</string>
+
+
 </resources>
